# bmw_wallet

./: .gitignore  Cargo.toml  README.md  azure-pipelines.yml  build_static.sh  find_open_ssl.sh  find_openssl.sh
.ci/: release.yml  test.yml  windows-release.yml
api/: Cargo.toml
api/src/: lib.rs
config/: Cargo.toml
config/src/: bmw.yml  comments.rs  conf_util.rs  config.rs  error.rs  lib.rs
controller/: Cargo.toml
controller/src/: controller.rs  error.rs  lib.rs
impls/: Cargo.toml
impls/resources/1/chain_data/lmdb/: lock.mdb
impls/resources/1/chain_data/tor/listener/: torrc
impls/resources/1/chain_data/tor/listener/onion_service_addresses/ylnyz2kzcrdyph7vxk4ldvbdaqemcmojaqn6att7lfm7owreoaogrsqd/: hostname  hs_ed25519_public_key  hs_ed25519_secret_key
impls/resources/1/lmdb/: data.mdb  lock.mdb
impls/resources/1/tor/listener/: torrc
impls/resources/1/tor/listener/onion_service_addresses/ykpnocn7pu3okbijgfrmazhrdpcppqm657d7byginvzcjlhhfasqtmad/: hostname  hs_ed25519_public_key  hs_ed25519_secret_key
impls/src/: error.rs  lib.rs  scan.rs  seed.rs  wallet.rs
impls/src/client_utils/: client.rs
impls/src/node_clients/: http.rs
impls/tests/: chain_test_helper.rs  wallet.rs
impls/tests/resources/1/lmdb/: data.mdb  lock.mdb
impls/tests/resources/1/peer/: data.mdb  lock.mdb
impls/tests/resources/1/tor/listener/: torrc
impls/tests/resources/1/tor/listener/data/: cached-certs  cached-microdesc-consensus  state
impls/tests/resources/1/tor/listener/onion_service_addresses/6r2ig5khdopsr4tja63gwlv7jb6jewiwcmfh572xavxsnwlueshnmsqd/: hostname  hs_ed25519_public_key  hs_ed25519_secret_key
impls/tests/resources/2/lmdb/: data.mdb  lock.mdb
impls/tests/resources/2/peer/: data.mdb  lock.mdb
impls/tests/resources/2/tor/listener/: torrc
impls/tests/resources/2/tor/listener/data/: cached-certs  cached-microdesc-consensus  state
impls/tests/resources/2/tor/listener/onion_service_addresses/jvnp7cu3u4mzqud3rqwlmt7z3l3om6janxd3pulkjigtdstknrab7sid/: hostname  hs_ed25519_public_key  hs_ed25519_secret_key
impls/tests/resources/3/lmdb/: data.mdb  lock.mdb
impls/tests/resources/3/peer/: data.mdb  lock.mdb
impls/tests/resources/3/tor/listener/: torrc
impls/tests/resources/3/tor/listener/data/: cached-certs  state
impls/tests/resources/3/tor/listener/onion_service_addresses/qo22hnrhcowxi3m3p4qu2afmlp46yfktkoc5hniwxzzybdqvbsw2flqd/: hostname  hs_ed25519_public_key  hs_ed25519_secret_key
impls/tests/resources/4/lmdb/: data.mdb  lock.mdb
impls/tests/resources/4/peer/: data.mdb  lock.mdb
impls/tests/resources/4/tor/listener/: torrc
impls/tests/resources/4/tor/listener/data/: cached-certs  state
impls/tests/resources/4/tor/listener/onion_service_addresses/spuobeljzicmbg2v3vnngnnkvdf6ilcpjiqv5a5sol3dwovwzdelonad/: hostname  hs_ed25519_public_key  hs_ed25519_secret_key
libwallet/: Cargo.toml
libwallet/src/: error.rs  lib.rs  types.rs
util/: Cargo.toml
util/src/: lib.rs
