[package]
name = "bmw_wallet"
version = "0.0.1"
authors = ["BMW Developers"]
description = "NIT Wallet for BMW Cryptocurrency"
license = "Apache-2.0"
repository = "https://github.com/bitcoinmw/bmw-wallet"
keywords = [ "crypto", "bmw", "mimblewimble" ]
readme = "README.md"
exclude = ["**/*.bmw", "**/*.bmw2"]
edition = "2018"

[[bin]]
name = "bmw-wallet"
path = "src/bin/bmw-wallet.rs"

[workspace]
members = ["api", "config", "controller", "impls", "libwallet", "util"]

[dependencies]
failure = "0.1"
failure_derive = "0.1"
clap = { version = "2.33", features = ["yaml"] }
log = "0.4"

bmw_wallet_api = { path = "./api", version = "0.0.1" }
bmw_wallet_impls = { path = "./impls", version = "0.0.1" }
bmw_wallet_libwallet = { path = "./libwallet", version = "0.0.1" }
bmw_wallet_controller = { path = "./controller", version = "0.0.1" }
bmw_wallet_config = { path = "./config", version = "0.0.1" }
bmw_wallet_util = { path = "./util", version = "0.0.1" }
