[package]
name = "bmw_wallet_config"
version = "0.0.1"
authors = ["BMW Developers"]
description = "BMW Wallet API"
license = "Apache-2.0"
repository = "https://github.com/bitcoinmw/bmw-wallet"
keywords = [ "crypto", "bmw", "mimblewimble" ]
exclude = ["**/*.bmw", "**/*.bmw2"]
build = "src/build.rs"
edition = "2018"

[dependencies]
failure = "0.1"
failure_derive = "0.1"
dirs = "2.0"
clap = { version = "2.33", features = ["yaml"] }
toml = "0.5.8"
log = "0.4"

bmw_wallet_util = { path = "../util", version = "0.0.1" }

[build-dependencies]
built = { version = "0.4", features = ["git2"]}
