[package]
name = "bmw_wallet_controller"
version = "0.0.1"
authors = ["BMW Developers"]
description = "BMW Wallet API"
license = "Apache-2.0"
repository = "https://github.com/bitcoinmw/bmw-wallet"
keywords = [ "crypto", "bmw", "mimblewimble" ]
exclude = ["**/*.bmw", "**/*.bmw2"]
edition = "2018"

[dependencies]
failure = "0.1"
failure_derive = "0.1"
chrono = "0.4.19"
num-format = "0.4.0"
colored = "2.0.0"
rpassword = "2.0.0"

bmw_wallet_libwallet = { path = "../libwallet", version = "0.0.1" }
bmw_wallet_config = { path = "../config", version = "0.0.1" }
bmw_wallet_impls = { path = "../impls", version = "0.0.1" }
bmw_wallet_util = { path = "../util", version = "0.0.1" }

