[package]
name = "bmw_wallet_libwallet"
version = "0.0.1"
authors = ["BMW Developers"]
description = "BMW Wallet API"
license = "Apache-2.0"
repository = "https://github.com/bitcoinmw/bmw-wallet"
keywords = [ "crypto", "bmw", "mimblewimble" ]
exclude = ["**/*.bmw", "**/*.bmw2"]
edition = "2018"

[dependencies]
failure = "0.1"
failure_derive = "0.1"
serde = "1.0.111"
serde_derive = "1.0.111"
serde_json = "1"
bitcoin = { git = "https://github.com/bitcoinmw/rust-bitcoin"}

bmw_wallet_config = { path = "../config", version = "0.0.1" }
bmw_wallet_util = { path = "../util", version = "0.0.1" }

